--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   cloud_firestore: ^0.12.11
   provider: ^3.2.0
   email_validator: ^1.0.3
+  flutter_spinkit: "^4.1.0"
+  intl: ^0.16.0
 
 dev_dependencies:
   flutter_test:
