--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  firebase_auth: ^0.15.1
-  cloud_firestore: ^0.12.11
+  firebase_auth: ^0.15.3
+  cloud_firestore: ^0.13.0+1
   provider: ^3.2.0
   email_validator: ^1.0.3
   flutter_spinkit: "^4.1.0"
