--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.4+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.6.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -30,6 +30,7 @@ dependencies:
   flutter_spinkit: "^4.1.0"
   intl: ^0.16.0
   auto_size_text: ^2.1.0
+  uuid: ^2.0.4
 
 dev_dependencies:
   flutter_test:
